# kvik

./: Cargo.toml  TODO
.github/workflows/: rust.yml
benches/: all.rs  composed.rs  find_first.rs  fusion_cap_tuning.rs  iter_sort.rs  maximum_subarray.rs  merge.rs  slice_sort.rs  sort.rs  sort_scalability.rs  tuning.rs
examples/: adapt.rs  all.rs  censorship.rs  drive.rs  even_sum.rs  find.rs  find_log.rs  join_context_policy.rs  max_sum.rs  merge.rs  palindromes.rs  par_sort.rs  points.rs  rayon.rs  sort_logprofile.rs  string_search.rs  try_fold.rs  try_reduce.rs  unique.rs
src/: adaptive.rs  blocked.rs  cap.rs  composed.rs  composed_counter.rs  composed_size.rs  composed_task.rs  even_levels.rs  filter.rs  fold.rs  join_context_policy.rs  join_policy.rs  lib.rs  log.rs  lower_bound.rs  macro_blocks.rs  map.rs  merge.rs  prelude.rs  range.rs  rayon_policy.rs  sequential.rs  size_limit.rs  slice.rs  str.rs  traits.rs  try_fold.rs  upper_bound.rs  worker.rs  wrap.rs  zip.rs
src/adaptors/: adaptive.rs  all.rs  bound_depth.rs  by_blocks.rs  cap.rs  composed.rs  composed_counter.rs  composed_size.rs  composed_task.rs  even_levels.rs  filter.rs  flat_map.rs  fold.rs  force_depth.rs  join_context_policy.rs  log.rs  map.rs  merge.rs  microblocks.rs  mod.rs  next.rs  rayon_policy.rs  rev.rs  scheduler_adaptors.rs  sequential.rs  size_limit.rs  try_fold.rs  zip.rs
src/algorithms/: iter_sort.rs  (+3 more)
tests/: find_first_test.rs  iter_jcjc_test.rs  iter_parsort_test.rs  merge_adaptor_test.rs  merge_test.rs  slice_adaptive_jp_test.rs  slice_jcjc_test.rs  slice_parsort_test.rs
(+14 files in other folders)
