[package]
name = "rayon_try_fold"
version = "0.1.0"
authors = ["frederic wagner <frederic.wagner@imag.fr>"]
edition = "2018"

[features]
# enable this to log using rayon_logs
logs = ["rayon_logs"]

[dependencies]
rayon="*"
crossbeam="*"
rayon_logs={optional=true, git="https://github.com/wagnerf42/rayon-logs"}
