[package]
name = "rayon_try_fold"
version = "0.1.0"
authors = ["frederic wagner <frederic.wagner@imag.fr>"]
edition = "2018"

[features]
# enable this to log using rayon_logs
logs = ["rayon_logs"]

[dependencies]
rayon="*"
crossbeam="*"
rayon_logs={optional=true, git="https://github.com/wagnerf42/rayon-logs"}
rand="*"

[[bench]]
name="merge"
harness=false

[[bench]]
name="sort"
harness=false

[[bench]]
name="sort_scalability"
harness=false

[dev_dependencies]
criterion="*"
itertools="*"
